--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,5 @@
 version: '3.8'
-
 services:
-  # PostgreSQL Database Service
-  postgres:
-    image: postgres:16-alpine
-    container_name: contractguard-postgres
-    environment:
-      POSTGRES_DB: ${DB_NAME:-contractguard_db}
-      POSTGRES_USER: ${DB_USER:-contractguard_user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-contractguard_pass}
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-contractguard_user} -d ${DB_NAME:-contractguard_db}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - contractguard-network
-    restart: unless-stopped
-
-  # Redis Cache Service
-  redis:
-    image: redis:7-alpine
-    container_name: contractguard-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password}
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - contractguard-network
-    restart: unless-stopped
-
-  # ContractGuard Application Service
   app:
     build:
       context: .
@@ -48,45 +7,26 @@ services:
       target: development
     container_name: contractguard-app
     environment:
-      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-dev}
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_NAME: ${DB_NAME:-contractguard_db}
-      DB_USER: ${DB_USER:-contractguard_user}
-      DB_PASSWORD: ${DB_PASSWORD:-contractguard_pass}
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
-      SECRET_KEY: ${SECRET_KEY:-Cwl+mM9B02LYx+d3ywwvItWeSVc7/ZN32tAbk+3SO7DJ7kiJSBgZIGs8p9sIiVzlW6wiQVQP23uzoBqpi3uzAQ==}
-      JWT_EXPIRATION: ${JWT_EXPIRATION:-86400000}
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
+      DATABASE_URL: ${DATABASE_URL}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_SSL: ${REDIS_SSL}
+      SECRET_KEY: ${SECRET_KEY}
+      JWT_EXPIRATION: ${JWT_EXPIRATION}
+      SERVER_PORT: ${SERVER_PORT}
     ports:
-      - "8080:8080"
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      - "${SERVER_PORT:-8080}:8080"
     volumes:
       - ./src:/app/src
       - ~/.m2:/root/.m2
-    networks:
-      - contractguard-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
     restart: unless-stopped
-
-volumes:
-  postgres_data:
-    driver: local
-  redis_data:
-    driver: local
-
-networks:
-  contractguard-network:
-    driver: bridge
-
-
