--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: ContractGuard
 
-
+  # Production - uses DATABASE_URL
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT:5432}/${DB_NAME}
+    url: ${DATABASE_URL}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -15,7 +15,6 @@ spring:
       idle-timeout: 600000
       max-lifetime: 1800000
       connection-test-query: "SELECT 1"
-
 
   jpa:
     hibernate:
@@ -32,36 +31,33 @@ spring:
     show-sql: false
     open-in-view: false
 
-
   flyway:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
     out-of-order: false
 
-
   data:
     redis:
       host: ${REDIS_HOST}
-      port: ${REDIS_PORT:6379}
+      port: ${REDIS_PORT:6380}
       password: ${REDIS_PASSWORD}
-      timeout: 2000
+      ssl:
+        enabled: ${REDIS_SSL:true}
+      timeout: 2000ms
       jedis:
         pool:
           max-active: 32
           max-idle: 16
           min-idle: 8
 
-
   jackson:
     default-property-inclusion: non_null
-
 
   security:
     jwt:
       secret: ${SECRET_KEY}
       expiration: ${JWT_EXPIRATION:86400000}
-
 
 server:
   port: ${SERVER_PORT:8080}
@@ -72,7 +68,6 @@ server:
     min-response-size: 1024
   http2:
     enabled: true
-
 
 logging:
   level:
@@ -101,4 +96,3 @@ management:
       enabled: true
     readinessState:
       enabled: true
-
