--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -76,6 +76,7 @@ management:
     web:
       exposure:
         include: health,info,metrics
+      base-path: /actuator
   endpoint:
     health:
       show-details: always
