CI/CD pipelines implementation

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,15 @@
-DB_NAME=contractguard_db
-DB_USER=contractguard_user
-DB_PASSWORD=contractguard_pass
-DB_HOST=postgres
-DB_PORT=5432
+DATABASE_URL=jdbc:postgresql://your-host.pooler.gwc.azure.neon.tech/neondb?sslmode=require
+DB_USER=neondb_owner
+DB_PASSWORD=your_database_password
+REDIS_HOST=your-redis.redis.cache.windows.net
+REDIS_PORT=6380
+REDIS_PASSWORD=your_redis_password
+REDIS_SSL=true
 
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_PASSWORD=redis_password
-REDIS_SSL=false
-
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=your_jwt_secret_key_minimum_256_bits
 JWT_EXPIRATION=86400000
 
 SPRING_PROFILES_ACTIVE=dev
 SERVER_PORT=8080
 
-
+GITHUB_USERNAME=your_github_username
